2009-09-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/rtems/pci.h: Revert extern inline patch.

2009-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/capture/capture.c, posix/src/pthread.c, rtems/src/tasks.c,
	score/include/rtems/score/userext.h: Eliminate use of deprecated
	rtems_extension. Re-add prototype for _User_extensions_Add_API_set.

2009-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/include/rtems/libcsupport.h,
	libcsupport/src/newlibc_reent.c: Eliminate use of deprecated
	rtems_extension.

2009-09-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/Makefile.am: Re-add file accidentally deleted by Sebastian.

2009-09-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/inline/rtems/score/thread.inl: Restore the BSP context -- do
	not save the current. This routine is also marked as not returning
	which saves the exit path code.

2009-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/rtems/pci.h: Change extern inline to static inline.

2009-09-25	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* sapi/include/rtems/extension.h, sapi/src/extensiondelete.c,
	sapi/src/extensionident.c, sapi/src/extensioncreate.c,
	sapi/inline/rtems/extension.inl, score/include/rtems/score/userext.h,
	score/src/userextthreaddelete.c, score/src/userext.c,
	score/src/userextthreadcreate.c, score/src/userextremoveset.c,
	score/src/userextthreadbegin.c, score/src/userextaddset.c,
	score/src/userextthreadstart.c, score/src/userextthreadswitch.c,
	score/src/userextthreadrestart.c: Documentation. The types
	User_extensions_routine and rtems_extension are now deprecated.
	Removed unused types User_extensions_thread_post_switch_extension and
	rtems_task_post_switch_extension. Renamed _User_extensions_Add_API_set()
	in _User_extensions_Add_set(). Renamed _User_extensions_Add_set() in
	_User_extensions_Add_set_with_table().
	* score/src/userextaddapiset.c: Removed file.
	* score/Makefile.am: Update.
