@@ -47,7 +47,7 @@ rtems_status_code rtems_region_delete(
 )
 {
   Objects_Locations        location;
-  rtems_status_code        return_status = RTEMS_INTERNAL_ERROR;
+  rtems_status_code        return_status;
   register Region_Control *the_region;
 
   _RTEMS_Lock_allocator();
