@@ -50,7 +50,7 @@ rtems_status_code rtems_region_get_free_information(
 )
 {
   Objects_Locations        location;
-  rtems_status_code        return_status = RTEMS_INTERNAL_ERROR;
+  rtems_status_code        return_status;
   register Region_Control *the_region;
 
   if ( !the_info )
