@@ -49,7 +49,7 @@ rtems_status_code rtems_region_get_segment_size(
 )
 {
   Objects_Locations        location;
-  rtems_status_code        return_status = RTEMS_INTERNAL_ERROR;
+  rtems_status_code        return_status;
   register Region_Control *the_region;
 
   if ( !segment )
